--- a/scode/public/manifest.json
+++ b/scode/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "SCode",
+  "name": "Secret Code",
   "icons": [
     {
       "src": "favicon.ico",
