--- a/scode/package.json
+++ b/scode/package.json
@@ -52,6 +52,8 @@
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
     "@types/html2canvas": "^1.0.0",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "@types/react-icons": "^3.0.0",
+    "react-icons": "^5.3.0"
   }
 }
